# react-native-jsi-template

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-template.podspec  react-native-simple-jsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativesimplejsi/: SimpleJsiModule.java  SimpleJsiModulePackage.java
cpp/: example.cpp  example.h
example/: App.js  app.json  package.json  timer.js
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativesimplejsi/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/: MainApplication.java
example/android/app/src/main/java/com/example/reactnativesimplejsi/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/SimpleJsiExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/SimpleJsiExample.xcodeproj/: project.pbxproj
example/ios/SimpleJsiExample.xcodeproj/xcshareddata/xcschemes/: SimpleJsiExample.xcscheme
example/ios/SimpleJsiExample.xcworkspace/: contents.xcworkspacedata
example/ios/example.xcodeproj/: project.pbxproj
example/src/: App.js  App.tsx
ios/: SimpleJsi.h  SimpleJsi.m  SimpleJsi.mm
ios/SimpleJsi.xcodeproj/: project.pbxproj
src/: index.ts  index.tsx
